# rumor_net

./: .gitignore  data_loader.py  main.py  network.py  pyproject.toml
example/: main.py
example/submission_examples_code/: example_1.py
example/submission_examples_params/: example_1.json
profiles/: net.gml  net2.gml  network.csv  network1.csv  network2.csv  population_profiles.json  spreader_profile.json  supervisor_profile.json
