[project]
name = "rumor-net"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.3",
    "networkx>=3.5",
    "numpy>=2.3.0",
    "python-louvain>=0.16",
    "scipy>=1.15.3",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
